MacViews: Don't handle cut/copy/paste accelerators in views::Textfield

On Mac, these always dispatch via the responder chain and the `Edit`
menu in the main menu bar. This ensures they obey custom key mappings
that a user may have set up in System Preferences via string matching
on the specific menu items.

Bug: 773565
Change-Id: Ic09db94866b6bd37791517505b24211c6c1105c4